[package]
name = "array-section"
authors = ["Johanna Sörngård <jsorngard@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.2.1"
edition = "2021"
keywords = ["array", "const", "subarray"]
categories = ["no-std", "no-std::no-alloc"]
description = "An array where only a (contiguous) subarray may be viewed or operated on"
repository = "https://github.com/JSorngard/array-section"

[dependencies]

[features]
# Lets the error type provide a [`Backtrace`](https://doc.rust-lang.org/std/backtrace/struct.Backtrace.html). When this feature is disabled the crate is `no_std` compatible. Enables the `alloc` feature.
std = ["alloc"]
# Enables conversion of the array section into [`Vec`](https://doc.rust-lang.org/std/vec/struct.Vec.html)s and [`Box`](https://doc.rust-lang.org/std/boxed/struct.Box.html)ed slices.
alloc = []

[package.metadata.docs.rs]
# document all features
all-features = true